nimcuda/cublas_api.nim


proc cublasStrsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    A: ptr cfloat; lda: cint; x: ptr cfloat; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasStrsv_v2", dynlib: libName.}
proc cublasStrsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; A: ptr cfloat; lda: clonglong; x: ptr cfloat;
                       incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasStrsv_v2_64", dynlib: libName.}
proc cublasDtrsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    A: ptr cdouble; lda: cint; x: ptr cdouble; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasDtrsv_v2", dynlib: libName.}
proc cublasDtrsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; A: ptr cdouble; lda: clonglong; x: ptr cdouble;
                       incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasDtrsv_v2_64", dynlib: libName.}
proc cublasCtrsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    A: ptr cuComplex; lda: cint; x: ptr cuComplex; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasCtrsv_v2", dynlib: libName.}
proc cublasCtrsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; A: ptr cuComplex; lda: clonglong;
                       x: ptr cuComplex; incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCtrsv_v2_64", dynlib: libName.}
proc cublasZtrsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    A: ptr cuDoubleComplex; lda: cint; x: ptr cuDoubleComplex;
                    incx: cint): cublasStatus_t {.cdecl, importc: "cublasZtrsv_v2",
    dynlib: libName.}
proc cublasZtrsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; A: ptr cuDoubleComplex; lda: clonglong;
                       x: ptr cuDoubleComplex; incx: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZtrsv_v2_64", dynlib: libName.}
##  TPSV

proc cublasStpsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    AP: ptr cfloat; x: ptr cfloat; incx: cint): cublasStatus_t {.cdecl,
    importc: "cublasStpsv_v2", dynlib: libName.}
proc cublasStpsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; AP: ptr cfloat; x: ptr cfloat; incx: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasStpsv_v2_64", dynlib: libName.}
proc cublasDtpsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    AP: ptr cdouble; x: ptr cdouble; incx: cint): cublasStatus_t {.cdecl,
    importc: "cublasDtpsv_v2", dynlib: libName.}
proc cublasDtpsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; AP: ptr cdouble; x: ptr cdouble; incx: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasDtpsv_v2_64", dynlib: libName.}
proc cublasCtpsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    AP: ptr cuComplex; x: ptr cuComplex; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasCtpsv_v2", dynlib: libName.}
proc cublasCtpsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; AP: ptr cuComplex; x: ptr cuComplex;
                       incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCtpsv_v2_64", dynlib: libName.}
proc cublasZtpsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    AP: ptr cuDoubleComplex; x: ptr cuDoubleComplex; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasZtpsv_v2", dynlib: libName.}
proc cublasZtpsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; AP: ptr cuDoubleComplex; x: ptr cuDoubleComplex;
                       incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasZtpsv_v2_64", dynlib: libName.}
##  TBSV

proc cublasStbsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    k: cint; A: ptr cfloat; lda: cint; x: ptr cfloat; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasStbsv_v2", dynlib: libName.}
proc cublasStbsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; k: clonglong; A: ptr cfloat; lda: clonglong;
                       x: ptr cfloat; incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasStbsv_v2_64", dynlib: libName.}
proc cublasDtbsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    k: cint; A: ptr cdouble; lda: cint; x: ptr cdouble; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasDtbsv_v2", dynlib: libName.}
proc cublasDtbsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; k: clonglong; A: ptr cdouble; lda: clonglong;
                       x: ptr cdouble; incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasDtbsv_v2_64", dynlib: libName.}
proc cublasCtbsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    k: cint; A: ptr cuComplex; lda: cint; x: ptr cuComplex; incx: cint): cublasStatus_t {.
    cdecl, importc: "cublasCtbsv_v2", dynlib: libName.}
proc cublasCtbsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; k: clonglong; A: ptr cuComplex; lda: clonglong;
                       x: ptr cuComplex; incx: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCtbsv_v2_64", dynlib: libName.}
proc cublasZtbsv_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; diag: cublasDiagType_t; n: cint;
                    k: cint; A: ptr cuDoubleComplex; lda: cint; x: ptr cuDoubleComplex;
                    incx: cint): cublasStatus_t {.cdecl, importc: "cublasZtbsv_v2",
    dynlib: libName.}
proc cublasZtbsv_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; diag: cublasDiagType_t;
                       n: clonglong; k: clonglong; A: ptr cuDoubleComplex;
                       lda: clonglong; x: ptr cuDoubleComplex; incx: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZtbsv_v2_64", dynlib: libName.}
##  SYMV/HEMV
